kubernetes/kustomize/umami/overlays/preprod/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  labels:
    app.kubernetes.io/name: umami
    app.kubernetes.io/instance: preprod
    environment: preprod
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
