kubernetes/kustomize/umami/overlays/preprod/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "opentelemetry/otel-instrumentation"
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      initContainers: []
      volumes: []
      containers:
        - name: umami
          command:
            - "node"
          args:
            - "/app/server.js"
          volumeMounts: []
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            limits:
              cpu: "1000m"
              memory: "1Gi"
            requests:
              cpu: "50m"
              memory: "256Mi"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: umami
                topologyKey: kubernetes.io/hostname
